# cellulars-template

./: Cargo.toml  README.md
benches/: io_bench.rs  main.rs  model_bench.rs
benches/fixtures/: 2000_pond.toml  500_pond.toml  8000_pond.toml  full_lattice.toml  full_pond.toml  large_lattice.toml
benches/model_files/: full_lattice.toml  large_lattice.toml
config/: 1_cell.toml  64_cells.toml
examples/: 1_cell.toml  64_cells.toml
src/: biases.rs  chemotaxis_bias.rs  constants.rs  lib.rs  main.rs  model.rs  my_cell.rs  my_environment.rs  my_pond.rs  pond.rs  potts.rs
src/io/: cli.rs  io_manager.rs  mod.rs  parameters.rs  plots.rs
tests/: io.rs  model.rs
tests/fixtures/: mig_div_templates.parquet
