[package]
name = "model"
version = "0.1.1"
edition = "2024"
license = "LGPL-3.0-only"
description = "A very fast, extensible CPM implementation."
homepage = "https://github.com/aleferna12/cellulars-template"
repository = "https://github.com/aleferna12/cellulars-template"
readme = "README.md"

[features]
default = ["f64", "movie-io"]
f64 = ["cellulars/f64"]
movie-io = ["cellulars/movie-io"]
fixed-boundary = []
von-neumann = []

[[bench]]
name = "main"
harness = false

[[bench]]
name = "model_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false

[dependencies]
cellulars = { version = "0.1.4", default-features = false, features = ["data-io", "image-io"] }
anyhow = "1.0.99"
bon = "3.7.2"
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
rand = "0.10.0"
rand_xoshiro = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
imageproc = "0.26.0"
palette = "0.7.6"
toml = "1.0.3"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
